Cuarto proyecto finalmente acabado

--- a/FCCampComputerScientific_A2.ipynb
+++ b/FCCampComputerScientific_A2.ipynb
@@ -328,20 +328,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "source": [
-    "# Clase"
+    "# Clase\r\n",
+    "class Rectangle:\r\n",
+    "    \"\"\"Calcula y obtiene informacion de un rectangulo\"\"\"\r\n",
+    "\r\n",
+    "    def __init__(self, width, height):\r\n",
+    "        self.width = width\r\n",
+    "        self.height = height\r\n",
+    "\r\n",
+    "    def __str__(self):\r\n",
+    "        return f\"Rectangle(width={self.width}, height={self.height})\"\r\n",
+    "\r\n",
+    "    # Establecer ancho\r\n",
+    "    def set_width(self, width):\r\n",
+    "        self.width = width\r\n",
+    "\r\n",
+    "    # Establecer altura\r\n",
+    "    def set_height(self, height):\r\n",
+    "        self.height = height\r\n",
+    "\r\n",
+    "    # Obtencion del area\r\n",
+    "    def get_area(self):\r\n",
+    "        return self.width * self.height\r\n",
+    "\r\n",
+    "    # Obtencion del perimetro\r\n",
+    "    def get_perimeter(self):\r\n",
+    "        return 2*self.width + 2*self.height\r\n",
+    "\r\n",
+    "    # Obtener diagonal\r\n",
+    "    def get_diagonal(self):\r\n",
+    "        return pow(pow(self.width, 2) + pow(self.height, 2), 0.5)\r\n",
+    "\r\n",
+    "    # Obtener dibujo (representacion)\r\n",
+    "    def get_picture(self):\r\n",
+    "        output = \"\"\r\n",
+    "        if self.height > 50 or self.width > 50:\r\n",
+    "            output = \"Too big for picture.\"\r\n",
+    "            return output\r\n",
+    "        else:\r\n",
+    "            output = ((\"*\" * self.width)+\"\\n\") * self.height\r\n",
+    "        return output\r\n",
+    "\r\n",
+    "    def get_amount_inside(self, shape):\r\n",
+    "        return int(self.get_area() / shape.get_area())\r\n",
+    "\r\n",
+    "# Clase Cuadrado hereda de Rectangulo\r\n",
+    "class Square(Rectangle):\r\n",
+    "    def __init__(self, side_len):\r\n",
+    "        super().__init__(side_len, side_len)\r\n",
+    "\r\n",
+    "    # Obtener medida\r\n",
+    "    def __str__(self):\r\n",
+    "        return f\"Square(side={self.width})\"\r\n",
+    "\r\n",
+    "    # Establecer lados\r\n",
+    "    def set_side(self, side_len):\r\n",
+    "        super().set_width(side_len)\r\n",
+    "        super().set_height(side_len)"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "source": [
-    "# Metodo principal"
+    "# Metodo principal\r\n",
+    "rect = Rectangle(10, 5)\r\n",
+    "print(rect.get_area())\r\n",
+    "rect.set_height(3)\r\n",
+    "print(rect.get_perimeter())\r\n",
+    "print(rect)\r\n",
+    "print(rect.get_picture())\r\n",
+    "\r\n",
+    "sq = Square(9)\r\n",
+    "print(sq.get_area())\r\n",
+    "sq.set_side(4)\r\n",
+    "print(sq.get_diagonal())\r\n",
+    "print(sq)\r\n",
+    "print(sq.get_picture())\r\n",
+    "\r\n",
+    "rect.set_height(8)\r\n",
+    "rect.set_width(16)\r\n",
+    "print(rect.get_amount_inside(sq))"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-2-220d251691d1>, line 18)",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-2-220d251691d1>\"\u001b[1;36m, line \u001b[1;32m18\u001b[0m\n\u001b[1;33m    print(rect.get_amount_inside(sq)\u001b[0m\n\u001b[1;37m                                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "metadata": {}
   }
  ],
