Se inicia un nuevo proyecto

--- a/FCCampComputerScientific_A2.ipynb
+++ b/FCCampComputerScientific_A2.ipynb
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "source": [
     "# Metodo principal\r\n",
     "rect = Rectangle(10, 5)\r\n",
@@ -416,14 +416,79 @@
    ],
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-2-220d251691d1>, line 18)",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-2-220d251691d1>\"\u001b[1;36m, line \u001b[1;32m18\u001b[0m\n\u001b[1;33m    print(rect.get_amount_inside(sq)\u001b[0m\n\u001b[1;37m                                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "50\n",
+      "26\n",
+      "Rectangle(width=10, height=3)\n",
+      "**********\n",
+      "**********\n",
+      "**********\n",
+      "\n",
+      "81\n",
+      "5.656854249492381\n",
+      "Square(side=4)\n",
+      "****\n",
+      "****\n",
+      "****\n",
+      "****\n",
+      "\n",
+      "8\n"
      ]
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Probabily calculador\r\n",
+    "## Asignacion\r\n",
+    "Supón que hay un sombrero que contiene 5 bolas azules, 4 rojas y 2 verdes. ¿Cuál es la probabilidad de que un sorteo de 4 bolas contenga al menos 1 bola roja y 2 verdes? Aunque sería posible calcular la probabilidad utilizando matemáticas avanzadas, una forma más sencilla es escribir un programa que realice un gran número de experimentos para estimar una probabilidad aproximada.\r\n",
+    "\r\n",
+    "Para este proyecto, escribirás un programa para determinar la probabilidad aproximada de sacar ciertas bolas al azar de un sombrero. \r\n",
+    "\r\n",
+    "Primero, crea una clase `Hat` en `prob_calculator.py`. La clase debe tomar un número variable de argumentos que especifiquen el número de bolas de cada color que hay en el sombrero. Por ejemplo, el objeto de la clase podría crearse de cualquiera de estas maneras\r\n",
+    "```\r\n",
+    "hat1 = Sombrero(amarillo=3, azul=2, verde=6)\r\n",
+    "hat2 = Sombrero(rojo=5, naranja=4)\r\n",
+    "hat3 = Sombrero(rojo=5, naranja=4, negro=1, azul=0, rosa=2, rayado=9)\r\n",
+    "```\r\n",
+    "\r\n",
+    "Un sombrero siempre se creará con al menos una bola. Los argumentos pasados al objeto sombrero en el momento de la creación deben ser convertidos en una variable de instancia `contents`. El contenido debe ser una lista de cadenas que contenga un elemento por cada bola del sombrero. Cada elemento de la lista debe ser un nombre de color que represente una sola bola de ese color. Por ejemplo, si su sombrero es `{\"rojo\": 2, \"azul\": 1}`, `contents` debería ser `[\"rojo\", \"rojo\", \"azul\"]`.\r\n",
+    "\r\n",
+    "La clase `Sombrero` debe tener un método `sacar` que acepte un argumento que indique el número de bolas a sacar del sombrero. Este método debería sacar bolas al azar del `contenido` y devolver esas bolas como una lista de cadenas. Las bolas no deben volver al sombrero durante el sorteo, de forma similar a un experimento de urna sin reemplazo. Si el número de bolas a extraer supera la cantidad disponible, devuelve todas las bolas.\r\n",
+    "\r\n",
+    "A continuación, crea una función `experimento` en `prob_calculator.py` (no dentro de la clase `Sombrero`). Esta función debe aceptar los siguientes argumentos:\r\n",
+    "* `sombrero`: Un objeto sombrero que contenga bolas que deben ser copiadas dentro de la función.\r\n",
+    "* `Bolas_esperadas`: Un objeto que indica el grupo exacto de bolas que se intentará sacar del sombrero para el experimento. Por ejemplo, para determinar la probabilidad de sacar 2 bolas azules y 1 roja del sombrero, establezca `balas_esperadas` como `{\"azul\":2, \"rojo\":1}`.\r\n",
+    "* `num_balls_drawn`: El número de bolas que se sacan del sombrero en cada experimento.\r\n",
+    "* `num_experiments`: El número de experimentos a realizar. (Cuantos más experimentos se realicen, más precisa será la probabilidad aproximada).\r\n",
+    "\r\n",
+    "La función `experimento` debe devolver una probabilidad. \r\n",
+    "\r\n",
+    "Por ejemplo, supongamos que queremos determinar la probabilidad de obtener al menos 2 bolas rojas y 1 verde al extraer 5 bolas de un sombrero que contiene 6 negras, 4 rojas y 3 verdes. Para ello, realizamos `N` experimentos, contamos cuántas veces `M` obtenemos al menos 2 bolas rojas y 1 verde, y estimamos la probabilidad como `M/N`. Cada experimento consiste en empezar con un sombrero que contiene las bolas especificadas, sacar un número de bolas y comprobar si conseguimos las bolas que intentábamos sacar.\r\n",
+    "\r\n",
+    "Así es como se llamaría a la función `experimento` basándose en el ejemplo anterior con 2000 experimentos:\r\n",
+    "\r\n",
+    "```\r\n",
+    "sombrero = sombrero(negro=6, rojo=4, verde=3)\r\n",
+    "probabilidad = experimento(hat=hat, \r\n",
+    "                  expected_balls={\"rojo\":2, \"verde\":1},\r\n",
+    "                  num_balls_drawn=5,\r\n",
+    "                  número_experimentos=2000)\r\n",
+    "```\r\n",
+    "\r\n",
+    "Como esto se basa en sorteos aleatorios, la probabilidad será ligeramente diferente cada vez que se ejecute el código.\r\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
    "metadata": {}
   }
  ],
