Se termina ultimo proyecto

--- a/FCCampComputerScientific_A2.ipynb
+++ b/FCCampComputerScientific_A2.ipynb
@@ -486,9 +486,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 4,
+   "source": [
+    "# Pruebas:\r\n",
+    "\r\n",
+    "\r\n",
+    "def estructura(**args):\r\n",
+    "    balls = args\r\n",
+    "    contents = []\r\n",
+    "    n_balls = 0\r\n",
+    "    for k,v in args.items():\r\n",
+    "        for _ in range(0, v):\r\n",
+    "            contents.append(k)\r\n",
+    "        n_balls += v\r\n",
+    "    print(args.items())\r\n",
+    "    print(balls)\r\n",
+    "    print(contents)\r\n",
+    "    print(n_balls)\r\n",
+    "\r\n",
+    "estructura(blue=3, red=2, green=5)\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'blue': 3, 'red': 2, 'green': 5}\n",
+      "['blue', 'blue', 'blue', 'red', 'red', 'green', 'green', 'green', 'green', 'green']\n",
+      "10\n"
+     ]
+    }
+   ],
    "metadata": {}
   }
  ],
