Se corrigen errores

--- a/FCCampComputerScientific_A2.ipynb
+++ b/FCCampComputerScientific_A2.ipynb
@@ -486,34 +486,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "source": [
-    "# Pruebas:\r\n",
+    "# Se utilizaran los siguientes modulos importados\r\n",
+    "import copy\r\n",
+    "import random\r\n",
+    "from collections import Counter\r\n",
     "\r\n",
     "\r\n",
-    "def estructura(**args):\r\n",
-    "    balls = args\r\n",
-    "    contents = []\r\n",
-    "    n_balls = 0\r\n",
-    "    for k,v in args.items():\r\n",
-    "        for _ in range(0, v):\r\n",
-    "            contents.append(k)\r\n",
-    "        n_balls += v\r\n",
-    "    print(args.items())\r\n",
-    "    print(balls)\r\n",
-    "    print(contents)\r\n",
-    "    print(n_balls)\r\n",
+    "class Hat:\r\n",
+    "    # Metodo inicio\r\n",
+    "    def __init__(self, **args):\r\n",
+    "        \"\"\"Obtiene una lista con el numero de apariciones de\r\n",
+    "        cada color\"\"\"\r\n",
+    "        self.balls = args\r\n",
+    "        self.contents = []\r\n",
+    "        self.nBalls = 0\r\n",
+    "        for k,v in args.items():\r\n",
+    "            for _ in range(0, v):\r\n",
+    "                self.contents.append(k)\r\n",
+    "            self.nBalls += v\r\n",
     "\r\n",
-    "estructura(blue=3, red=2, green=5)\r\n"
+    "    # Metodo \"quitar\"\r\n",
+    "    def draw(self, nBallsDraw):\r\n",
+    "        if nBallsDraw > self.nBalls:\r\n",
+    "            return self.contents\r\n",
+    "        ballsDraw = []\r\n",
+    "        ballsDraw = random.sample(self.contents, nBallsDraw)\r\n",
+    "        for i in ballsDraw:\r\n",
+    "            self.contents.remove(i)\r\n",
+    "        return ballsDraw\r\n",
+    "        \r\n",
+    "\r\n",
+    "# EXPERIMENTO PRINCIPAL\r\n",
+    "def experiment(hat, expected_balls, num_balls_drawn, num_experiments):\r\n",
+    "    if num_balls_drawn > hat.nBalls:\r\n",
+    "        num_balls_drawn = hat.nBalls\r\n",
+    "    \r\n",
+    "    experiments = [random.sample(hat.contents, num_balls_drawn) for _ in range(0, num_experiments)] \r\n",
+    "    counter_experiments = [Counter(i) for i in experiments]\r\n",
+    "\r\n",
+    "    n_success = 0\r\n",
+    "    for i in counter_experiments:\r\n",
+    "        bool_success = True\r\n",
+    "        for k,v in expected_balls.items():\r\n",
+    "            if v > i[k]:\r\n",
+    "                bool_success = False\r\n",
+    "                break\r\n",
+    "        if bool_success:\r\n",
+    "            n_success +=1\r\n",
+    "    return n_success / num_experiments\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "source": [
+    "hat = Hat(blue=4, red=2, green=6)   \r\n",
+    "probability = experiment(\r\n",
+    "    hat=hat,\r\n",
+    "    expected_balls={\"blue\":2, \"red\":1},\r\n",
+    "    num_balls_drawn=4,\r\n",
+    "    num_experiments=3000\r\n",
+    ")\r\n",
+    "print(\"La probabilidad es: \",probability)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "{'blue': 3, 'red': 2, 'green': 5}\n",
-      "['blue', 'blue', 'blue', 'red', 'red', 'green', 'green', 'green', 'green', 'green']\n",
-      "10\n"
+      "La probabilidad es:  0.16966666666666666\n"
      ]
     }
    ],
