Se continuan con los ejercicios string

--- a/Python Hk A2.ipynb
+++ b/Python Hk A2.ipynb
@@ -2,130 +2,131 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "smooth-stranger",
-   "metadata": {},
    "source": [
     "# Strings"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "chronic-netherlands",
-   "metadata": {},
    "source": [
     "## Swap case\n",
     "\n",
     "Se te da una cadena y tu tarea es intercambiar las mayúsculas y minúsculas. En otras palabras, convertir todas las letras minúsculas en mayúsculas y viceversa\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "economic-northwest",
-   "metadata": {},
+   "source": [
+    "# Usando las  inbuilt libraries\r\n",
+    "cadena = \"HOLA Me llamo mike\"\r\n",
+    "dir(cadena)\r\n",
+    "print(cadena.swapcase())"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "hola mE LLAMO MIKE\n"
      ]
     }
    ],
-   "source": [
-    "# Usando las  inbuilt libraries\n",
-    "cadena = \"HOLA Me llamo mike\"\n",
-    "dir(cadena)\n",
-    "print(cadena.swapcase())"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "included-humanity",
-   "metadata": {},
+   "execution_count": 1,
+   "source": [
+    "# En caso de querer recordar las demas\r\n",
+    "print(\"\".join([i.lower() if i.isupper() else i.upper() for i in input()]))"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "hoLA coMo esTas jEjE MañaNa nOS VEMos\n",
-      "HOla COmO EStAS JeJe mAÑAnA Nos vemOS\n"
+      "mAÑANA sERa OtRO dIa\n"
      ]
     }
    ],
-   "source": [
-    "# En caso de querer recordar las demas\n",
-    "print(\"\".join([i.lower() if i.isupper() else i.upper() for i in input()]))"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "oriental-bracelet",
-   "metadata": {},
+   "source": [
+    "# Sin hacer uso de los metodos islower, isupper\r\n",
+    "def swap_case(s):\r\n",
+    "    result = \"\"\r\n",
+    "    for letter in s:\r\n",
+    "        if letter == letter.upper():\r\n",
+    "            result += letter.lower()\r\n",
+    "        else:\r\n",
+    "            result += letter.upper()\r\n",
+    "    return result\r\n",
+    "\r\n",
+    "print(swap_case(\"mañana NOS VEMOS JEje adios\"))"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "MAÑANA nos vemos jeJE ADIOS\n"
      ]
     }
    ],
-   "source": [
-    "# Sin hacer uso de los metodos islower, isupper\n",
-    "def swap_case(s):\n",
-    "    result = \"\"\n",
-    "    for letter in s:\n",
-    "        if letter == letter.upper():\n",
-    "            result += letter.lower()\n",
-    "        else:\n",
-    "            result += letter.upper()\n",
-    "    return result\n",
-    "\n",
-    "print(swap_case(\"mañana NOS VEMOS JEje adios\"))"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "delayed-style",
-   "metadata": {},
+   "source": [
+    "# Usando el metodo lambda\r\n",
+    "print(*map(lambda char:char.lower() if char.isupper() else char.upper(), input()), sep=\"\")"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Hola COmo estas mAÑANA nos vemos AYIOS\n",
       "hOLA coMO ESTAS Mañana NOS VEMOS ayios\n"
      ]
     }
    ],
-   "source": [
-    "# Usando el metodo lambda\n",
-    "print(*map(lambda char:char.lower() if char.isupper() else char.upper(), input()), sep=\"\")"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "present-pathology",
-   "metadata": {},
    "source": [
     "## Metodos split y join\n",
     "\n",
     "El metodo `split` devuelve una lista de strings"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "finished-montgomery",
-   "metadata": {},
+   "source": [
+    "# Solucion basica\r\n",
+    "nombre = \"Miguel Angel Lopez Castillo\"\r\n",
+    "lista_nombre = nombre.split(\" \")\r\n",
+    "\r\n",
+    "print(nombre)\r\n",
+    "print(lista_nombre)\r\n",
+    "\r\n",
+    "nombre2 = \"-\".join(lista_nombre)+\"\\tdesde la lista\"\r\n",
+    "print(nombre2)\r\n"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Miguel Angel Lopez Castillo\n",
       "['Miguel', 'Angel', 'Lopez', 'Castillo']\n",
@@ -133,79 +134,77 @@
      ]
     }
    ],
-   "source": [
-    "# Solucion basica\n",
-    "nombre = \"Miguel Angel Lopez Castillo\"\n",
-    "lista_nombre = nombre.split(\" \")\n",
-    "\n",
-    "print(nombre)\n",
-    "print(lista_nombre)\n",
-    "\n",
-    "nombre2 = \"-\".join(lista_nombre)+\"\\tdesde la lista\"\n",
-    "print(nombre2)\n"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "powered-expansion",
-   "metadata": {},
+   "source": [
+    "# Solucion elegante\r\n",
+    "cadena = input(\"Cadena: \")\r\n",
+    "print(cadena.replace(\" \",\"-\"))"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Cadena: Sic parvis magna\n",
       "Sic-parvis-magna\n"
      ]
     }
    ],
-   "source": [
-    "# Solucion elegante\n",
-    "cadena = input(\"Cadena: \")\n",
-    "print(cadena.replace(\" \",\"-\"))"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "armed-thumb",
-   "metadata": {},
+   "source": [
+    "# Solucion elegante\r\n",
+    "print(\"-\".join(input(\"Cadena: \").split(\" \")))"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Cadena: Intriguin possibilities\n",
       "Intriguin-possibilities\n"
      ]
     }
    ],
-   "source": [
-    "# Solucion elegante\n",
-    "print(\"-\".join(input(\"Cadena: \").split(\" \")))"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "surrounded-history",
-   "metadata": {},
    "source": [
     "### Cual es tu nombre\n",
     "Te dan el nombre y el apellido de una persona en dos líneas diferentes. Tu tarea es leerlos e imprimir lo siguiente:\n",
     "\n",
     "_Hello `firstname lastname`! You just delved into python._"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "comprehensive-stack",
-   "metadata": {},
+   "source": [
+    "# Usando funciones\r\n",
+    "def print_full_name(first, last):\r\n",
+    "    full_name = first.split() + last.split()\r\n",
+    "    full_name = \" \".join(full_name)\r\n",
+    "    print(f\"Hello {full_name} You just delved into python!\")\r\n",
+    "\r\n",
+    "\r\n",
+    "firstname = input(\"Nombre: \")\r\n",
+    "lastname = input(\"Apellido: \")\r\n",
+    "print_full_name(firstname, lastname)\r\n",
+    "\r\n"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Nombre: Miguel Angel\n",
       "Apellido: Lopez Castillo\n",
@@ -213,29 +212,20 @@
      ]
     }
    ],
-   "source": [
-    "# Usando funciones\n",
-    "def print_full_name(first, last):\n",
-    "    full_name = first.split() + last.split()\n",
-    "    full_name = \" \".join(full_name)\n",
-    "    print(f\"Hello {full_name} You just delved into python!\")\n",
-    "\n",
-    "\n",
-    "firstname = input(\"Nombre: \")\n",
-    "lastname = input(\"Apellido: \")\n",
-    "print_full_name(firstname, lastname)\n",
-    "\n"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "referenced-blade",
-   "metadata": {},
+   "source": [
+    "# Programa acortado\r\n",
+    "\r\n",
+    "print(f\"Hello {input('name: ')} {input('last name: ')} You just delved into python!\")"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "name: miguel angel\n",
       "last name: lopez castillo\n",
@@ -243,60 +233,59 @@
      ]
     }
    ],
-   "source": [
-    "# Programa acortado\n",
-    "\n",
-    "print(f\"Hello {input('name: ')} {input('last name: ')} You just delved into python!\")"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "considered-aruba",
-   "metadata": {},
+   "execution_count": 3,
+   "source": [
+    "# Usando funciones\r\n",
+    "def print_full_name(first, last):\r\n",
+    "    full_name =[first, last]\r\n",
+    "    print(*full_name)\r\n",
+    "    print(*[_ for _ in full_name])\r\n",
+    "\r\n",
+    "\r\n",
+    "firstname = input(\"Nombre:\\t\")\r\n",
+    "lastname = input(\"Apellido:\\t\")\r\n",
+    "print_full_name(firstname, lastname)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Nombre:\tMiguel Angel\n",
-      "Apellido:\tLopez Castillo+\n",
-      "Miguel Angel Lopez Castillo+\n",
-      "Miguel Angel Lopez Castillo+\n"
+      "Maria Fernanda Lugo Cortez\n",
+      "Maria Fernanda Lugo Cortez\n"
      ]
     }
    ],
-   "source": [
-    "# Usando funciones\n",
-    "def print_full_name(first, last):\n",
-    "    full_name =[first, last]\n",
-    "    print(*full_name)\n",
-    "    print(*[_ for _ in full_name])\n",
-    "\n",
-    "\n",
-    "firstname = input(\"Nombre:\\t\")\n",
-    "lastname = input(\"Apellido:\\t\")\n",
-    "print_full_name(firstname, lastname)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "crude-instrumentation",
-   "metadata": {},
    "source": [
     "## Mutabilidad e inmutabilidad\n",
     "Lee una cadena dada, cambia el carácter en un índice dado y luego imprime la cadena modificada."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "sonic-bachelor",
-   "metadata": {},
+   "source": [
+    "def mutate_string(string, position, character):\r\n",
+    "    return string[:position] + character + string[position+1:]\r\n",
+    "\r\n",
+    "s = input()\r\n",
+    "i, c = input().split()\r\n",
+    "s_new = mutate_string(s, int(i), c)\r\n",
+    "print(s_new)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Hola que tal como estas\n",
       "10 m\n",
@@ -304,36 +293,60 @@
      ]
     }
    ],
-   "source": [
-    "def mutate_string(string, position, character):\n",
-    "    return string[:position] + character + string[position+1:]\n",
-    "\n",
-    "s = input()\n",
-    "i, c = input().split()\n",
-    "s_new = mutate_string(s, int(i), c)\n",
-    "print(s_new)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "id": "a9aef5eb",
-   "metadata": {},
    "source": [
-    "## Buscando una string\n",
-    "El usuario ingresara una cadena y una subcadena, se tiene que imprimir el numero de veces en que la subcadena se encuentra en la cadena principal.\n",
-    "El recorrido de la cadena es de izquierda a derecha.\n",
-    "\n"
-   ]
+    "## Buscando una string\r\n",
+    "El usuario ingresara una cadena y una subcadena, se tiene que imprimir el numero de veces en que la subcadena se encuentra en la cadena principal.\r\n",
+    "El recorrido de la cadena es de izquierda a derecha.\r\n",
+    "\r\n"
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a1d16c18",
-   "metadata": {},
+   "source": [
+    "def search_substring(cadena, subcadena):\r\n",
+    "    posiciones =[]\r\n",
+    "    posicion =0\r\n",
+    "    \r\n",
+    "    while posicion != -1:\r\n",
+    "        posicion  = cadena.find(subcadena, posicion)\r\n",
+    "        if posicion != -1:\r\n",
+    "            posiciones.append(posicion)\r\n",
+    "            posicion += 1\r\n",
+    "    return len(posiciones)\r\n",
+    "    \r\n",
+    "\r\n",
+    "test ={\r\n",
+    "    \"wrd1\":\"mi mama me mima\",\r\n",
+    "    \"wrd2\":\"mama que amamanta\",\r\n",
+    "    \"wrd3\":\"mi mama ama que la amamos\"\r\n",
+    "}\r\n",
+    "\r\n",
+    "subcadena =[\"ama\", \"ma\"]\r\n",
+    "\r\n",
+    "#CON SOLAPAMIENTO\r\n",
+    "print(\"CON SOLAPAMIENTO\")\r\n",
+    "for clave  in test:\r\n",
+    "    apariciones = [search_substring(test[clave], sub) for sub in subcadena]\r\n",
+    "    print(apariciones)\r\n",
+    "    \r\n",
+    "\r\n",
+    "#SIN SOLAPAMIENTO USANDO EL METODO COUNT\r\n",
+    "print(\"\\n\\nSIN SOLAPAMIENTO USO DE METODO count\")\r\n",
+    "for clave  in test:\r\n",
+    "    apariciones = [test[clave].count(sub) for sub in subcadena]\r\n",
+    "    print(apariciones)\r\n",
+    "\r\n"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "CON SOLAPAMIENTO\n",
       "[1, 3]\n",
@@ -348,130 +361,135 @@
      ]
     }
    ],
-   "source": [
-    "def search_substring(cadena, subcadena):\n",
-    "    posiciones =[]\n",
-    "    posicion =0\n",
-    "    \n",
-    "    while posicion != -1:\n",
-    "        posicion  = cadena.find(subcadena, posicion)\n",
-    "        if posicion != -1:\n",
-    "            posiciones.append(posicion)\n",
-    "            posicion += 1\n",
-    "    return len(posiciones)\n",
-    "    \n",
-    "\n",
-    "test ={\n",
-    "    \"wrd1\":\"mi mama me mima\",\n",
-    "    \"wrd2\":\"mama que amamanta\",\n",
-    "    \"wrd3\":\"mi mama ama que la amamos\"\n",
-    "}\n",
-    "\n",
-    "subcadena =[\"ama\", \"ma\"]\n",
-    "\n",
-    "#CON SOLAPAMIENTO\n",
-    "print(\"CON SOLAPAMIENTO\")\n",
-    "for clave  in test:\n",
-    "    apariciones = [search_substring(test[clave], sub) for sub in subcadena]\n",
-    "    print(apariciones)\n",
-    "    \n",
-    "\n",
-    "#SIN SOLAPAMIENTO USANDO EL METODO COUNT\n",
-    "print(\"\\n\\nSIN SOLAPAMIENTO USO DE METODO count\")\n",
-    "for clave  in test:\n",
-    "    apariciones = [test[clave].count(sub) for sub in subcadena]\n",
-    "    print(apariciones)\n",
-    "\n"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "a071cd04",
-   "metadata": {},
+   "execution_count": 5,
+   "source": [
+    "# USANDO COMPRESION DE LISTAS------\r\n",
+    "# BASADO EN:\r\n",
+    "\"\"\"\r\n",
+    "string, substring = (input().strip(), input().strip())\r\n",
+    "print(sum([ 1 for i in range(len(string)-len(substring)+1) \r\n",
+    "if string[i:i+len(substring)] == substring]))\r\n",
+    "\"\"\"\r\n",
+    "\r\n",
+    "test ={\r\n",
+    "    \"wrd1\":\"mi mama me mima\",\r\n",
+    "    \"wrd2\":\"mama que amamanta\",\r\n",
+    "    \"wrd3\":\"mi mama ama que la amamos\"\r\n",
+    "}\r\n",
+    "\r\n",
+    "\r\n",
+    "subcadena =[\"ama\", \"ma\"]\r\n",
+    "\r\n",
+    "coincidencias = []\r\n",
+    "for clave in test:\r\n",
+    "    for sub in subcadena:\r\n",
+    "        cuenta = sum(\r\n",
+    "            [1 for i in range(len(test[clave])-len(sub)+1)\r\n",
+    "            if test[clave][i:i+len(sub)] == sub]\r\n",
+    "        )\r\n",
+    "        coincidencias.append(cuenta)\r\n",
+    "\r\n",
+    "print(coincidencias)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "1\n",
-      "3\n",
-      "3\n",
-      "4\n",
-      "3\n",
-      "4\n"
+      "[1, 3, 3, 4, 3, 4]\n"
      ]
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
    "source": [
-    "# USANDO COMPRESION DE LISTAS------\n",
-    "# BASADO EN:\n",
-    "\"\"\"\n",
-    "string, substring = (input().strip(), input().strip())\n",
-    "print(sum([ 1 for i in range(len(string)-len(substring)+1) \n",
-    "if string[i:i+len(substring)] == substring]))\n",
-    "\"\"\"\n",
-    "\n",
-    "test ={\n",
-    "    \"wrd1\":\"mi mama me mima\",\n",
-    "    \"wrd2\":\"mama que amamanta\",\n",
-    "    \"wrd3\":\"mi mama ama que la amamos\"\n",
-    "}\n",
-    "\n",
-    "\n",
-    "subcadena =[\"ama\", \"ma\"]\n",
-    "\n",
-    "\n",
-    "for clave in test:\n",
-    "    for sub in subcadena:\n",
-    "        cuenta = sum(\n",
-    "            [1 for i in range(len(test[clave])-len(sub)+1)\n",
-    "            if test[clave][i:i+len(sub)] == sub]\n",
-    "        )\n",
-    "        print(cuenta)\n",
-    "    \n",
-    "\n",
-    "\n"
-   ]
+    "## Comprobacion de cadenas\r\n",
+    "Python tiene métodos de validación de cadenas incorporados para los datos básicos. Puede comprobar si una cadena está compuesta por caracteres alfabéticos, caracteres alfanuméricos, dígitos, etc."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "source": [
+    "# Comprobando cadenas\r\n",
+    "## No se recomienda el uso de eval\r\n",
+    "s = input()\r\n",
+    "\r\n",
+    "for test in (\"isalnum\", \"isalpha\", \"isdigit\", \"islower\"):\r\n",
+    "    print(any(eval(\"c.\"+test+\"()\") for c in s))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "source": [
+    "# Evitando el uso de eval\r\n",
+    "\r\n",
+    "s = input()\r\n",
+    "for method in [str.isalnum, str.isalpha, str.isdigit, str.islower, str.isupper]:\r\n",
+    "    print(any(method(c) for c in s))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Alineacion de texto\r\n",
+    "Remplazar los espacios en blanco con los metodos `rjust`, `ljust` y `center` "
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "585883de",
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65db2b66",
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3737aefe",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "driven-barrel",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -484,6 +502,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
+  },
+  "interpreter": {
+   "hash": "c469c999aae2bf6d578d6881606ced546d1546d312a4811937df5b24665ee8bc"
   }
  },
  "nbformat": 4,
