Segunda parte ejercicios string

--- a/Python Hk A2.ipynb
+++ b/Python Hk A2.ipynb
@@ -466,16 +466,41 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Alineacion de texto\r\n",
-    "Remplazar los espacios en blanco con los metodos `rjust`, `ljust` y `center` "
+    "## Envoltura de texto\r\n",
+    "Se asigna una cadena `S` con un ancho `w`\r\n",
+    "Envolver la cadena segun el tamaño de texto"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
+   "execution_count": 20,
+   "source": [
+    "test = \"ABCDEFGHIJKLIMNOQRSTUVWXYZ\"\r\n",
+    "ancho = 4\r\n",
+    "\r\n",
+    "contador=0\r\n",
+    "for i in test:\r\n",
+    "    contador+=1\r\n",
+    "    if contador%ancho==0:\r\n",
+    "        i+=\"\\n\"\r\n",
+    "    print(i,end=\"\")"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "ABCD\n",
+      "EFGH\n",
+      "IJKL\n",
+      "IMNO\n",
+      "QRST\n",
+      "UVWX\n",
+      "YZ"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
