Se agregan ejercicios sobre cadenas

--- a/Python Hk A2.ipynb
+++ b/Python Hk A2.ipynb
@@ -505,6 +505,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "source": [
+    "import string\r\n",
+    "import random\r\n",
+    "import textwrap\r\n",
+    "\r\n",
+    "# Metodos\r\n",
+    "def wrap(string, max_width):\r\n",
+    "    contador = 1\r\n",
+    "    cad = \"\"\r\n",
+    "    for i in string:\r\n",
+    "        cad +=i\r\n",
+    "        if contador % int(max_width) ==0:\r\n",
+    "            cad+=\"\\n\"\r\n",
+    "        contador+=1\r\n",
+    "    return cad\r\n",
+    "\r\n",
+    "def wrap2(string, max_width):\r\n",
+    "    return \"\\n\".join([string[i:i+max_width] for i in range(0, len(string),max_width)])\r\n",
+    "\r\n",
+    "def wrap3(string, max_width):\r\n",
+    "    \"\"\"Uso metodo de python\"\"\"\r\n",
+    "    return \"\\n\".join(textwrap.wrap(string, max_width))\r\n",
+    "\r\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "source": [
+    "\r\n",
+    "## Definiendo cadena tamaño 50\r\n",
+    "string_unformated = \"\".join(random.choices(string.ascii_letters+string.digits, k=50))\r\n",
+    "print(\"Cadena sin formato\")\r\n",
+    "print(string_unformated)\r\n",
+    "print(\"\\nCadena con formato\")\r\n",
+    "formated_str = wrap2(string_unformated, 10)\r\n",
+    "print(formated_str)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Cadena sin formato\n",
+      "h9fMvhoNup7ZC2nJ8MclSWC2u7j5j7gBGSa25417JPN0w33e0m\n",
+      "\n",
+      "Cadena con formato\n",
+      "h9fMvhoNup\n",
+      "7ZC2nJ8Mcl\n",
+      "SWC2u7j5j7\n",
+      "gBGSa25417\n",
+      "JPN0w33e0m\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "source": [],
    "outputs": [],
