Renombre de archivos -> especifica tema

--- a/PyHk_A2_Cadenas.ipynb
+++ b/PyHk_A2_Cadenas.ipynb
@@ -567,6 +567,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "source": [
+    "import string\r\n",
+    "\"\"\"\r\n",
+    "Explicacion del funcionamiento de este metodo.\r\n",
+    "def wrap2(string, max_width):\r\n",
+    "    return \"\\n\".join([string[i:i+max_width] for i in range(0, len(string),max_width)])\r\n",
+    "\"\"\"\r\n",
+    "\r\n",
+    "cadena = \"Holaminombreesmiketengo24añosyestudioparaserungranfinanciero\"\r\n",
+    "print(cadena)\r\n",
+    "lsta = [cadena[i:i+5] for i in range(0, len(cadena),5)] \r\n",
+    "print(lsta)\r\n",
+    "print(*lsta,sep=\"\\n\")"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Holaminombreesmiketengo24añosyestudioparaserungranfinanciero\n",
+      "['Holam', 'inomb', 'reesm', 'ikete', 'ngo24', 'añosy', 'estud', 'iopar', 'aseru', 'ngran', 'finan', 'ciero']\n",
+      "Holam\n",
+      "inomb\n",
+      "reesm\n",
+      "ikete\n",
+      "ngo24\n",
+      "añosy\n",
+      "estud\n",
+      "iopar\n",
+      "aseru\n",
+      "ngran\n",
+      "finan\n",
+      "ciero\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Diseño de tapete"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "source": [],
    "outputs": [],
